--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,53 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.923 2014/12/18 13:41:39 kensington Exp $
+
+  18 Dec 2014; Michael Palimaka <kensington@gentoo.org> vlc-2.1.9999.ebuild:
+  Don't try to reference USE flag that doesn't exist, again.
+
+  18 Dec 2014; Michael Palimaka <kensington@gentoo.org> vlc-2.1.2.ebuild,
+  vlc-2.1.4.ebuild, vlc-2.1.5.ebuild:
+  Don't try to reference USE flag that doesn't exist.
+
+  15 Dec 2014; Yixun Lan <dlan@gentoo.org> vlc-2.1.2.ebuild, vlc-2.1.4.ebuild,
+  vlc-2.1.5.ebuild, vlc-2.1.9999.ebuild, vlc-2.2.9999.ebuild, vlc-9999.ebuild:
+  1) drop keywords=amd64-fbsd from live ebuilds 2) vlc-2.1.*: Restricted
+  <net-misc/freerdp-1.2, bug 529640 3) Fixed qt* use flags when qtchooser and
+  both qt4 and qt5 are installed
+
+  12 Dec 2014; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
+  USE='vaapi' is now global, removing it's description from metadata
+
+  16 Nov 2014; Yixun Lan <dlan@gentoo.org> vlc-2.1.2.ebuild, vlc-2.1.4.ebuild,
+  vlc-2.1.5.ebuild, vlc-2.1.9999.ebuild, vlc-2.2.9999.ebuild, vlc-9999.ebuild,
+  metadata.xml:
+  proxy for maintainer, fix bug 525004, 506322, 489508, 499996
+  5) Add missing qtx11extras dependency for Qt5.
+  Fixes 525004 and unreported issue that VLC opens separate window for movie
+  when Qt5 X11 Extras are not found by configure script.
+  Although it is possible to use Qt5 with Wayland instead of X11, it is not
+  well supported by VLC, yet (WiP). Ebuild does not support wayland output, yet.
+  4) Removed workaround for avcodec use flag disabled.
+  It is not needed anymore starting with version 2.2
+  3) Corrected bugfix for bug 506322 - ebuild for version 2.1.5 was improperly fixed.
+  2) Drop support for Qt5 in VLC 2.1.x branch.
+  Fixes bug 489508. qt5 use flag was buggy, and this configuration was not very well
+  supported by upstream. Since Qt5 is still masked in portage tree, there is
+  a big chance that first VLC 2.2.x release will be before Qt5 is unmasked.
+  1) Disable fstack-check on x86 (enabled on hardened configurations by default)
+  because of registers shortage.
+  Fixes bug 499996 reported by Bertrand Jacquin and patch submitted by Anthony Basile.
+
+  15 Nov 2014; Markos Chandras <hwoarang@gentoo.org> vlc-2.1.2.ebuild,
+  vlc-2.1.4.ebuild, vlc-2.1.5.ebuild, vlc-2.1.9999.ebuild, vlc-2.2.9999.ebuild,
+  vlc-9999.ebuild:
+  Add X usedep to libva dependency. Bug #529270. Thanks to aambitny@gmail.com
+
+  14 Nov 2014; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
+  Remove myself.
+
+  10 Nov 2014; Yixun Lan <dlan@gentoo.org> vlc-2.2.9999.ebuild:
+  fix x265 deps typo
 
 *vlc-2.2.9999 (10 Nov 2014)
 
